[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geo-scraping-chatgpt-agent"
version = "0.1.0"
description = "CLI agent that queries ChatGPT in a logged-out browser session and stores answers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "playwright>=1.52.0",
]

[tool.setuptools]
packages = ["agent"]
